# hse-python-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: test.yml
chat/: client.py  main.py
chat_app/: README.md  client.py  main.py  requirements.txt
hm_1/: .instruction  http_utils.py  solution.py
homework_1/: README.md  handlers.py  main.py  math_utils.py  utils.py
hw/hw_1/: README.md  myapp.py
hw01-sockets/: app.py  endpoint.py  server.py
hw1/: README.md  main.py  myapp.py  requirements.txt
hw1/src/: mean.py  utils.py
hw1/tests/: test_homework_1.py
hw2/: Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt
hw2/shop_api/: crud.py  database.py  main.py  models.py  schemas.py
hw3/: Dockerfile  docker-compose.yml  prometheus.yml
hw3_docker/: Dockerfile  docker-compose.yml  main.py  prometheus.yml  requirements.txt
hw3_docker/prometheus/: counter_1.db  histogram_1.db  summary_1.db
lecture_1/: __init__.py  math_example.py  responses.py  utils.py  validators.py
lecture_1/hw/: README.md  calculations.py  client.py  errors.py  handles.py  math_plain_asgi.py  my_types.py  service.py  util.py  utils.py
lecture_2/dudos/: dudos.py
lecture_2/grpc_example/: README.md  example_client.py  example_service.py  ping_pb2.py  ping_pb2.pyi  ping_pb2_grpc.py
lecture_3/: ddoser.py  docker-compose.yml  prometheus.yml
lecture_3/hw/: ddoser.py  docker-compose.yml  prometheus.yml  pyproject.toml
lecture_3/hw/app/: cart_app.py  item_app.py  myapp.py
lecture_3/hw/docker/: Dockerfile  docker-compose.yml
lecture_3/hw/models/: cart.py
lecture_3/hw/prometheus/: prometheus.yml
lecture_3/hw/settings/prometheus/: prometheus.yml
lecture_3/hw/shop_api/: main.py
lecture_3/hw/shop_api/api/shop/cart/: contracts.py  routes.py
lecture_3/hw/shop_api/api/shop/item/: contracts.py  routes.py
lecture_3/hw/shop_api/store/cart_store/: core.py
lecture_3/hw/shop_api/store/item_store/: models.py
lecture_3/hw/store/: queries.py
lecture_4/: Dockerfile  docker-compose.yaml  docker-compose.yml  example_async.py  example_load.py  example_parse_qs.py  example_register_user.py  requirements.txt  test_load_demo_service.js
lecture_5/: Makefile  docker-compose.yml
rest_api_internet_shop/: Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  requirements.txt  schemas.py  user_activity.py
src/: README.md  handlers.py  main.py  senders.py
tasks/: task_1.py
tests/: test_homework_1.py  test_homework_2.py  test_pokemon_rest_api_example.py
(+211 files in other folders)
