[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
fastapi = "^0.114.2"
requests = "^2.32.3"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
websockets = "^13.1"
websocket-client = "^1.8.0"
faker = "^30.1.0"
httpx = "^0.27.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
pydantic = "^2.9.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^30.0.0"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
