[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
websockets = "^13.1"
websocket-client = "^1.8.0"
prometheus-fastapi-instrumentator = "^7.0.0"
pika = "^1.3.2"
confluent-kafka = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^30.0.0"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
responses = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
